--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "form-data": "^4.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
