Fix Netlify build: Add missing proxy-from-env dependency
- Add proxy-from-env@^1.1.0 to package.json dependencies
- Required by netlify/functions/api.js for proxy environment handling
- Fixes 'Cannot find module proxy-from-env' error in Netlify build
- Build tested locally and working correctly
- Third dependency fix for complete Netlify function compatibility

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "natural": "^8.1.0",
     "openai": "^5.10.1",
     "pdf-parse": "^1.1.1",
+    "proxy-from-env": "^1.1.0",
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
