--- a/package.json
+++ b/package.json
@@ -41,12 +41,18 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
+    "asynckit": "^0.4.0",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "combined-stream": "^1.0.8",
+    "delayed-stream": "^1.0.0",
+    "fast-safe-stringify": "^2.1.1",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.2",
     "mammoth": "^1.9.1",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
     "openai": "^5.10.1",
