Fix Netlify build: Add Corepack configuration to resolve syntax error
- Add NPM_FLAGS and COREPACK_ENABLE_STRICT environment variables
- Resolves Node.js Corepack configuration issues in Netlify build
- Fixes potential syntax errors related to package manager setup
- Should resolve any remaining build configuration issues

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,8 @@
   NODE_VERSION = "22"
   PNPM_VERSION = "9"
   SECRETS_SCAN_ENABLED = "false"
+  NPM_FLAGS = "--version"
+  COREPACK_ENABLE_STRICT = "0"
 
 # Disable secrets scanning entirely since we've removed actual secret values
 [build.processing.secrets]
