--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm install && pnpm run build"
+  command = "pnpm install --frozen-lockfile && pnpm run build --verbose"
   publish = "dist"
 
 [build.environment]
