Fix Netlify build: Revert to working configuration
COMPLETE REVERT TO WORKING SETUP:

Package.json Changes:
- Remove all extra dependencies that were causing conflicts
- Use only the core dependencies from working configuration
- Remove engines field that was causing version conflicts
- Clean dependency set: @nestjs core, axios, class-transformer, etc.

TypeScript Configuration:
- Revert to ES2021 target (working configuration)
- Remove esModuleInterop and resolveJsonModule additions
- Use original working tsconfig.json exactly as provided

Netlify Configuration:
- Revert to NODE_VERSION = '22' (working version)
- Revert to PNPM_VERSION = '9' (working version)
- Remove --frozen-lockfile and --verbose flags
- Use simple 'pnpm run build' command as in working config

This matches the exact working configuration provided by user:
- Simplified dependencies (no extra NestJS modules)
- Node.js 22 + PNPM 9 (proven working versions)
- Clean build process without extra flags
- Original TypeScript settings

Build tested locally and working correctly

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,11 @@
 [build]
-  command = "pnpm install --frozen-lockfile && pnpm run build --verbose"
+  command = "pnpm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18"
-  PNPM_VERSION = "8"
+  NODE_VERSION = "22"
+  PNPM_VERSION = "9"
   SECRETS_SCAN_ENABLED = "false"
-  NPM_FLAGS = "--version"
-  COREPACK_ENABLE_STRICT = "0"
 
 # Disable secrets scanning entirely since we've removed actual secret values
 [build.processing.secrets]
