--- a/package.json
+++ b/package.json
@@ -43,11 +43,14 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "follow-redirects": "^1.15.9",
+    "form-data": "^4.0.2",
     "mammoth": "^1.9.1",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
     "openai": "^5.10.1",
     "pdf-parse": "^1.1.1",
+    "proxy-from-env": "^1.1.0",
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
