--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nuxtjs/opencollective": "^0.3.2",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.9.0",
