--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "fast-safe-stringify": "^2.1.1",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.2",
     "mammoth": "^1.9.1",
