--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "fast-safe-stringify": "^2.1.1",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.2",
+    "iterare": "^1.2.1",
     "mammoth": "^1.9.1",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
