--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "multer": "^2.0.2",
     "natural": "^8.1.0",
     "openai": "^5.10.1",
+    "path-to-regexp": "^8.2.0",
     "pdf-parse": "^1.1.1",
     "proxy-from-env": "^1.1.0",
     "qs": "^6.14.0",
