--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "qs": "^6.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "tslib": "^2.8.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
