--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.8.1",
+    "uid": "^2.0.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
