--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "fast-safe-stringify": "^2.1.1",
+    "file-type": "^21.0.0",
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.2",
     "iterare": "^1.2.1",
