Fix Netlify: Add dotenv dependency
Ninth missing dependency for function bundling:
- dotenv@^16.4.7 (Environment variable loading)

Progressive dependency fixes:
1. follow-redirects ✅
2. form-data ✅
3. proxy-from-env ✅
4. @nuxtjs/opencollective ✅
5. fast-safe-stringify ✅
6. iterare ✅
7. path-to-regexp ✅
8. tslib ✅
9. uid ✅
10. file-type ✅
11. dotenv ✅

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^17.2.1",
     "fast-safe-stringify": "^2.1.1",
     "file-type": "^21.0.0",
     "follow-redirects": "^1.15.9",
