--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "follow-redirects": "^1.15.9",
     "form-data": "^4.0.2",
     "iterare": "^1.2.1",
+    "lodash": "^4.17.21",
     "mammoth": "^1.9.1",
     "multer": "^2.0.2",
     "natural": "^8.1.0",
