--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nuxtjs/opencollective": "^0.3.2",
     "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
+    "asynckit": "^0.4.0",
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
