Fix Netlify: Re-add combined-stream dependency
Thirteenth missing dependency for function bundling:
- combined-stream@^1.0.8 (Stream combination utilities - was removed during revert)

Progressive dependency fixes:
1. follow-redirects ✅
2. form-data ✅
3. proxy-from-env ✅
4. @nuxtjs/opencollective ✅
5. fast-safe-stringify ✅
6. iterare ✅
7. path-to-regexp ✅
8. tslib ✅
9. uid ✅
10. file-type ✅
11. dotenv ✅
12. dotenv-expand ✅
13. lodash ✅
14. asynckit ✅
15. combined-stream ✅ (re-added)

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "combined-stream": "^1.0.8",
     "dotenv": "^17.2.1",
     "dotenv-expand": "^12.0.2",
     "fast-safe-stringify": "^2.1.1",
